# sack

./: README.md  pyproject.toml
client_ui_poc/: main.py  styles.css
src/sack/: __init__.py  assets.py  cli.py  client.py  components.py  dev.py  main.py  protocol.py  screens.py  server.py  styles.css  util.py
src/sack/models/: __init__.py  client.py  protocol.py  server.py
