[project]
name = "sack"
version = "0.1.0"
description = "Python socket chat"
readme = "README.md"
authors = [
    { name = "mati", email = "mati@mati.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.5.0",
]

[project.scripts]
sack = "sack.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
