[project]
name = "sack"
version = "0.1.0"
description = "Python socket chat"
readme = "README.md"
authors = [
    { name = "mati", email = "mati@mati.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.5.0",
]
keywords = ["chat", "socket", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.urls]
Repository = "https://github.com/mati-33/sack"

[project.scripts]
sack = "sack.main:main"
sackdev = "sack.dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
