[project]
name = "sack"
version = "0.1.0"
description = "Python socket chat"
readme = "README.md"
authors = [
    { name = "mati", email = "mati@mati.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.5.0",
]
keywords = ["chat", "socket", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.urls]
Repository = "https://github.com/mati-33/sack"

[project.scripts]
sack = "sack.main:main"
sackdev = "sack.dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "F401", # unused imports
]

[tool.ruff.lint.per-file-ignores]
"src/sack/assets.py" = ["W291"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
length-sort = true
lines-after-imports = 2
lines-between-types = 1

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "textual-dev>=1.7.0",
]
